--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -10,6 +10,8 @@
       ul.nav.navbar-nav
         li.nav-item(class=(title === 'Home') ? 'active' : undefined)
           a.nav-link(href='/') Home
+        li.nav-item(class=(title === 'Gallery') ? 'active' : undefined)
+          a.nav-link(href='/gallery') Gallery
         li.nav-item(class=(title === 'API Examples') ? 'active' : undefined)
           a.nav-link(href='/api') API Examples
         li.nav-item(class=(title === 'Contact') ? 'active' : undefined)
