--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -4,17 +4,17 @@ block content
 
   h1 Gallery 
   div.gallery
-  .row.align-items-center.mb-5
-    .col-md-3.text-center.h-100
-      button.btn.btn-primary.btn-lg.h-100(class="previousImage" role='button') < 
-    .col-md-6 
-      img(class="galleryImage" src="", alt="")
-    .col-md-3.text-center
-      button.btn.btn-primary.btn-lg(class="nextImage" role='button') >
-  .row
-    .col-md-4 
-      img(class="thumbnail" src="", alt="")
-    .col-md-4 
-      img(class="thumbnail" src="", alt="")
-    .col-md-4 
-      img(class="thumbnail" src="", alt="")
+    .row.align-items-center.mb-5
+      .col-md-3.text-center.h-100
+        button.btn.btn-primary.btn-lg.h-100(class='previousImage' role='button') < 
+      .col-md-6 
+        img(class='galleryImage' src='', alt='')
+      .col-md-3.text-center
+        button.btn.btn-primary.btn-lg(class='nextImage' role='button') >
+    .row
+      .col-md-4 
+        img(class='thumbnail' src='', alt='')
+      .col-md-4 
+        img(class='thumbnail' src='', alt='')
+      .col-md-4 
+        img(class='thumbnail' src='', alt='')
