--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html.h-100
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
@@ -11,10 +11,10 @@ html
     link(rel='stylesheet', href='/css/main.css')
     block head
 
-  body
+  body.h-100
     include partials/header
 
-    .container
+    .container.h-100
       include partials/flash
       block content
 
